[package]
name = "ultreia"
version = "0.1.0"
authors = ["Christian Junker <chjdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# for enums
strum = "0.19"
strum_macros = "0.19"
# web
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
json = "0.12"

[dependencies.noise]
version = "0.6"
# we don't need the image dep
default-features = false

[lib]
name = "ultreia"
crate-type = ["staticlib", "cdylib"]
