[package]
name = "ultreia"
version = "0.1.0"
authors = ["Christian Junker <chjdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
lazy_static = "^1.4"
# for enums
strum = "^0.20"
strum_macros = "^0.20"
# random number / perlin noise
noise = { version = "^0.6", default-features = false }
# godot
gdnative = "^0.9"
# auto impls for new types
derive_more = "^0.99"
# multithreading
crossbeam = "^0.8"
rayon = "^1.5"

[dev-dependencies]
pretty_assertions = "^0.6"

[lib]
name = "ultreia"
crate-type = ["cdylib"]
